# harmony-filtering

./: .gitignore  .pre-commit-config.yaml  .snyk  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: publish_docker_image.yml  run_tests.yml
config/: config.json  config_schema.json  settings.json  settings_schema.json
docker/: docker-entrypoint.sh  service.Dockerfile  tests.Dockerfile
docs/: filtering_demo.ipynb  requirements.txt
src/harmony_filtering_service/: adapter.py  adapter_utils.py  cli.py  compare.py  config_validator.py  core.py  exceptions.py  logger.py
tests/: test_compare_nc_files.py  test_compare_nc_groups.py  test_config_validator.py  test_copy_group.py  test_core.py  test_logger.py  test_parse_full_path.py  test_parse_granule_filename.py  test_process_products.py
utils/: granule_downloader.py
