[project]
name = "harmony-filtering"
version = "0.1.0"
description = ""
authors = [
    { name = "Syed Rizvi", email = "syed.r.rizvi@nasa.gov" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
  "harmony-service-lib (>=2.6.0,<3.0.0)",
  "numpy (>=1.20.0)",
  "xarray (>=2022.11.0)",
  "netCDF4 (>=1.5.6)",
  "setuptools (>=76.0.0)",
  "earthaccess (>=0.14.0)",
  "jsonschema (>=4.23.0)",
]

[[tool.poetry.packages]]
include = "harmony_filtering_service"
from = "src"

[tool.poetry.group.dev.dependencies]
pytest  = "^8.3.5"
black   = "^25.1.0"
ruff    = "^0.11.7"
mypy    = "^1.15.0"
pylint  = "^3.3.6"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
# Target Python version
python_version        = "3.13"
strict                = false
ignore_missing_imports = true
# Skip tests entirely
exclude = "tests/.*"

[tool.pylint.'MASTER']
disable = ["C0114", "C0115", "C0116"]
